condition. Database has the basic functions to implement front-end and, if time permits, data collection
and modification of files through Python.

[June 18, 2019 - 02:14:40 PM]
NEW - Functional web application using Flask, with different sections. Will not implement style until the
main functionality of the program is usable.

TODO - Find a way to display SQL values on web application. If not able to do by tonight, resort to cmd.

[June 18, 2019 - 11:02:48 PM]
NEW - Values successfully displayed in HTML website since a few hours ago.
NEW - Functions to create, read, update, delete, sort, and find by calling dynamic SQL functions are
complete.

TODO - Implement logic to interpret input in the controller.
TODO - If time permits, find a way to let the user submit a query from the web application. Else, resort
to cmd and finish web application another time.

[June 19, 2019 - 12:43:58 AM]
EVENT - System crash approximately 2 mins ago. No files or changes were lost.

NEW - User can submit a query from the web application using a form which combines drop-down menus, text
fields and a submit button. This form is then sent back to the controller to update the data shown by the
web app.

TODO - Implement logic to interpret input in the controller.
TODO - Make sure all CRUD operations work on the database before 2:00:00 AM.

[June 19, 2019 - 1:28:15 AM]
EVENT - Second system crash approximately 12 mins ago. All static files lost.
ACTION TAKEN: Uninstalled all non-essential extensions. Created GitHub repository in case of loss of
essential files.
RESULT: IDE appears to be running more smoothly.

TODO - Complete pending actions from previous log entry before 2:30:00 AM.

[June 19, 2019 - 2:00:38 AM]
NEW - Web application successfully reads from database and displays results.

TODO - Implement logic for Create, Read, and Delete.
TODO - Make web application look nicer, if time permits.